# Ouchi-Face-typeG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ouchi_face/: __init__.py  database.py  main.py  models.py  repositories.py  schemas.py  utils.py
src/ouchi_face/static/: styles.css
src/ouchi_face/templates/: base.html  detail.html  form.html  home.html
tests/: test_app.py
