[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ouchi-face"
version = "0.1.0"
description = "Local-first portal to manage home lab AI resources"
readme = "README.md"
authors = [
    { name = "Ouchi Face" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "markdown>=3.6",
    "python-multipart>=0.0.9",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
"ouchi-face" = "ouchi_face.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
